--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,10 @@ description: This site is a Portfolio for Multimedia
 # List of links in the navigation bar
 navbar-links:
   Manifesto for Agile: "http://agilemanifesto.org/"
+  UI Design: "https://jiqi963.github.io/Multimedia/2019-08-30-UI-Design/"
+  Video: "https://jiqi963.github.io/Multimedia/2019-09-20-Video-Project/"
+  Animation: ""
+  Final Project: ""
 
 
 # Image to show in the navigation bar - image must be a square (width = height)
